--- a/Weboldal/Lőszer/loszer.html
+++ b/Weboldal/Lőszer/loszer.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Főoldal</title>
+    <title>Lőszer</title>
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="fooldal.css">
+    <link rel="stylesheet" href="loszer.css">
     
 </head>
 <body class="body">
@@ -13,16 +13,16 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <img class="logo" src="" alt="">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Főoldal</a>
+          <a class="navbar-brand" href="/Weboldal/Főoldal/fooldal.html">Főoldal</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="navbar-brand" aria-current="page" href="/Weboldal/Fegyverek/fegyverek.html">Fegyverek</a>
-              <a class="navbar-brand" href="/Weboldal/Lőszer/loszer.html">Lőszer</a>
+              <a class="navbar-brand" aria-current="page" href="/Weboldal/Fegyverek/fegyverek.html">Vásárlás</a>
+              <a class="navbar-brand" href="#">Lőszer</a>
               <a class="navbar-brand" href="#">Kapcsolat</a>
-              <a class="navbar-brand" href="#"><img class="kosarlogo" src="/Képek/kosar logo.png" alt=""></a>
+              <a class="navbar-brand" href="#"><img class="kosarlogo" src="/Képek/kosar logo.png"></a>
             </div>
           </div>
         </div>
@@ -30,4 +30,4 @@
 
     <link rel="stylesheet" href="bootstrap.min.js">
 </body>
-</html>s
+</html>
