--- a/Weboldal/Vásárlás/vasarlas.html
+++ b/Weboldal/Vásárlás/vasarlas.html
@@ -19,8 +19,8 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="navbar-brand" aria-current="page" href="/Weboldal/Fegyverek/fegyverek.html">Fegyverek</a>
-              <a class="navbar-brand" href="/Weboldal/Lőszer/loszer.html">Lőszer</a>
+              <a class="navbar-brand" aria-current="page" href="#">Vásárlás</a>
+              <a class="navbar-brand" href="#">Lőszer</a>
               <a class="navbar-brand" href="#">Kapcsolat</a>
               <a class="navbar-brand" href="#"><img class="kosarlogo" src="/Képek/kosar logo.png" alt=""></a>
             </div>
@@ -30,4 +30,4 @@
 
     <link rel="stylesheet" href="bootstrap.min.js">
 </body>
-</html>s
+</html>
