--- a/Weboldal/kedvencek/kedvencek.html
+++ b/Weboldal/kedvencek/kedvencek.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warrior's Arsenal Fegyverbolt</title>
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="kapcsolat.css">
+    <link rel="stylesheet" href="kedvencek.css">
     
 </head>
 <body class="body">
