--- a/fooldal1.html
+++ b/fooldal1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warrior's Arsenal Fegyverbolt</title>
     <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="kapcsolat.css">
+    <link rel="stylesheet" href="fooldal.css">
     
 </head>
 <body class="body">
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <img class="logo" src="/IKT-projekt/Képek/logo.png" alt="">
             <div class="navbar-nav">
-              <a class="navbar-brand" href="/IKT-projekt/Weboldal/Főoldal/fooldal.html">Főoldal</a>
+              <a class="navbar-brand" href="#">Főoldal</a>
               <a class="navbar-brand" aria-current="page" href="/IKT-projekt/Weboldal/Fegyverek/fegyverek.html">Fegyverek</a>
               <a class="navbar-brand" href="/IKT-projekt/Weboldal/Lőszer/loszer.html">Lőszer</a>
               <a class="navbar-brand" href="/IKT-projekt/Weboldal/Kapcsolat/kapcsolat.html">Kapcsolat</a>
