--- a/Weboldal/Főoldal/fooldal.html
+++ b/Weboldal/Főoldal/fooldal.html
@@ -17,16 +17,16 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <img class="logo" src="/IKT-projekt/Képek/logo.png" alt="">
+            <img class="logo" src="../Képek/logo.png" alt="">
             <div class="navbar-nav">
-              <a class="navbar-brand" href="/IKT-projekt/Weboldal/Főoldal/fooldal.html">Főoldal</a>
-              <a class="navbar-brand" aria-current="page" href="/IKT-projekt/Weboldal/Fegyverek/fegyverek.html">Fegyverek</a>
-              <a class="navbar-brand" href="/IKT-projekt/Weboldal/Lőszer/loszer.html">Lőszer</a>
-              <a class="navbar-brand" href="/IKT-projekt/Weboldal/Kapcsolat/kapcsolat.html">Kapcsolat</a>
+              <a class="navbar-brand" href="/Weboldal/Főoldal/fooldal.html">Főoldal</a>
+              <a class="navbar-brand" aria-current="page" href="../Fegyverek/fegyverek.html">Fegyverek</a>
+              <a class="navbar-brand" href="../Lőszer/loszer.html">Lőszer</a>
+              <a class="navbar-brand" href="../Kapcsolat/kapcsolat.html">Kapcsolat</a>
               
             </div>
-            <a class="navbar-brand" href="/IKT-projekt/Weboldal/Kosár/kosar.html"><img class="kosarlogo" src="/IKT-projekt/Képek/kosar logo.png" alt=""></a>
-            <a class="navbar-brand" href="/IKT-projekt/Weboldal/kedvencek/kedvencek.html"><img class="kedvenclogo" src="/IKT-projekt/Képek/kedvencek.png" alt=""></a>
+            <a class="navbar-brand" href="../Kosár/kosar.html"><img class="kosarlogo" src="../Képek/kosar logo.png" alt=""></a>
+            <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
           </div>
         </div>
       </nav>      
