--- a/Weboldal/Főoldal/fooldal.html
+++ b/Weboldal/Főoldal/fooldal.html
@@ -29,8 +29,19 @@
             <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
           </div>
         </div>
-      </nav>      
+      </nav>
 
-    <script src="/IKT-projekt/Weboldal/Főoldal/bootstrap.min.js"></script>
+      <div id="ajánló">
+        <strong>M16 gépkarabély</strong>
+        <div id="vásárolj_gomb">Vásárolj most!</div>
+      </div>
+      <footer>
+        <div class="row" id="footer_content">
+          <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_1.png" alt=""></div>
+          <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_2.png" alt=""></div>
+          <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_3.png" alt=""></div>
+        </div>
+      </footer>
+    <script src="bootstrap.min.js"></script>
 </body>
 </html>
