--- a/Weboldal/Fegyverek/fegyverek.html
+++ b/Weboldal/Fegyverek/fegyverek.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warrior's Arsenal Fegyverbolt</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="/Bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="fegyverek.css">
     
 </head>
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <img class="logo" src="/IKT-projekt/Képek/logo.png" alt="">
             <div class="navbar-nav">
-              <a class="navbar-brand" href="/IKT-projekt/Weboldal/Főoldal/fooldal.html">Főoldal</a>
+              <a class="navbar-brand" href="../Főoldal/fooldal.html">Főoldal</a>
               <a class="navbar-brand" aria-current="page" href="/IKT-projekt/Weboldal/Fegyverek/fegyverek.html">Fegyverek</a>
               <a class="navbar-brand" href="/IKT-projekt/Weboldal/Lőszer/loszer.html">Lőszer</a>
               <a class="navbar-brand" href="/IKT-projekt/Weboldal/Kapcsolat/kapcsolat.html">Kapcsolat</a>
@@ -31,6 +31,6 @@
         </div>
       </nav>      
 
-    <script src="/IKT-projekt/Weboldal/Főoldal/bootstrap.min.js"></script>
+    <script src="/Bootstrap/bootstrap.min.jss"></script>
 </body>
 </html>
