--- a/Weboldal/Főoldal/fooldal.html
+++ b/Weboldal/Főoldal/fooldal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warrior's Arsenal Fegyverbolt</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="/Bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="fooldal.css">
     
 </head>
@@ -42,6 +42,6 @@
           <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_3.png" alt=""></div>
         </div>
       </footer>
-    <script src="bootstrap.min.js"></script>
+    <script src="/Bootstrap/bootstrap.min.js"></script>
 </body>
 </html>
