fegyverek oldal elkezdése

--- a/Weboldal/Fegyverek/fegyverek.html
+++ b/Weboldal/Fegyverek/fegyverek.html
@@ -29,7 +29,44 @@
               <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
           </div>
         </div>
-      </nav>      
+      </nav>
+
+
+      <div class="card" style="width: 18rem;">
+        <img class="kep" src="../Képek/pisztoly.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="#" class="btn btn-primary">Pisztoly</a>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="card" style="width: 18rem;">
+        <img class="kep" src="../Képek/gepkarabely.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="#" class="btn btn-primary">Gépkarabély</a>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="card" style="width: 18rem;">
+        <img class="kep" src="../Képek/loszer.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="#" class="btn btn-primary">Lőszer</a>
+        </div>
+      </div>
+
+      <hr>
+
+      <div class="card" style="width: 18rem;">
+        <img class="kep" src="../Képek/egyeb.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <a href="#" class="btn btn-primary">Egyéb fegyverek</a>
+        </div>
+      </div>
+
+
 
     <script src="/Bootstrap/bootstrap.min.jss"></script>
 </body>
