fegyverek oldal kartyak igazitasa

--- a/Weboldal/Fegyverek/fegyverek.html
+++ b/Weboldal/Fegyverek/fegyverek.html
@@ -30,42 +30,44 @@
         </div>
       </nav>
 
-      <div class="row">
-        <div class="card" style="width: 18rem;">
-          <img class="kep" src="../Képek/pisztoly.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="#" class="btn btn-primary">Pisztoly</a>
+
+      <div class="fegyverek">
+        <div class="kartyak">
+          <div class="card" style="width: 18rem;">
+            <img class="kep" src="../Képek/pisztoly.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <a href="#" class="btn btn-primary">Pisztoly</a>
+            </div>
           </div>
-        </div>
 
-        <hr>
+          <hr>
 
-        <div class="card" style="width: 18rem;">
-          <img class="kep" src="../Képek/gepkarabely.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="#" class="btn btn-primary">Gépkarabély</a>
+          <div class="card" style="width: 18rem;">
+            <img class="kep" src="../Képek/gepkarabely.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <a href="#" class="btn btn-primary">Gépkarabély</a>
+            </div>
           </div>
-        </div>
 
-        <hr>
+          <hr>
 
-        <div class="card" style="width: 18rem;">
-          <img class="kep" src="../Képek/loszer.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="#" class="btn btn-primary">Lőszer</a>
+          <div class="card" style="width: 18rem;">
+            <img class="kep" src="../Képek/loszer.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <a href="#" class="btn btn-primary">Lőszer</a>
+            </div>
           </div>
-        </div>
 
-        <hr>
+          <hr>
 
-        <div class="card" style="width: 18rem;">
-          <img class="kep" src="../Képek/egyeb.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <a href="#" class="btn btn-primary">Egyéb fegyverek</a>
+          <div class="card" style="width: 18rem;">
+            <img class="kep" src="../Képek/egyeb.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <a href="#" class="btn btn-primary">Egyéb fegyverek</a>
+            </div>
           </div>
         </div>
       </div>
-
 
 
       
