pizstoly weboldal elkezdése,hiba keresés kosárba

--- a/Weboldal/Pisztoly/pisztoly.html
+++ b/Weboldal/Pisztoly/pisztoly.html
@@ -28,6 +28,14 @@
         </div>
       </nav>
 
+<div class="haromkep">
+<img src="/Kezdeti dolgok/Desert-Eagle-p1030134.jpg" alt="">
+<img src="/Kezdeti dolgok/beretta 92/" alt="">
+<img src="/Kezdeti dolgok/" alt="">
+
+</div>
+
+
     <link rel="stylesheet" href="bootstrap.min.js">
 </body>
 </html>
