--- a/Weboldal/kedvencek/kedvencek.html
+++ b/Weboldal/kedvencek/kedvencek.html
@@ -29,7 +29,11 @@
               <a class="navbar-brand" href="/IKT-projekt/Weboldal/kedvencek/kedvencek.html"><img class="kedvenclogo" src="/IKT-projekt/Képek/kedvencek.png" alt=""></a>
           </div>
         </div>
-      </nav>      
+      </nav>
+  <div class="image-container">
+    <img src="/IKT-projekt/Kezdeti dolgok/heart-dark-mode-glyph-ui-icon-like-button-expressing-love-reaction-user-interface-design-white-silhouette-symbol-on-black-space-solid-pictogram-for-web-mobile-isolated-illustration-vector-removebg-pre (1).png" alt="">
+  </div>
+          
 
     <script src="/IKT-projekt/Weboldal/Főoldal/bootstrap.min.js"></script>
 </body>
