pisztoly weboldal elso fegyver card

--- a/Weboldal/Pisztoly/pisztoly.html
+++ b/Weboldal/Pisztoly/pisztoly.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Főoldal</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="fooldal.css">
+    <link rel="stylesheet" href="/Bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="./pisztoly.css">
     
 </head>
 <body class="body">
@@ -29,13 +29,19 @@
       </nav>
 
 <div class="haromkep">
-<img src="/Kezdeti dolgok/Desert-Eagle-p1030134.jpg" alt="">
-<img src="/Kezdeti dolgok/beretta 92/" alt="">
-<img src="/Kezdeti dolgok/" alt="">
+  
+  <div class="card" style="width: 18rem;">
+    <img class="kep" src="../Képek/beretta92.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <a href="#" class="nev btn btn-primary">Beretta</a>
+      <p class="ár">149.999Ft</p>
+    </div>
+  </div>
+
 
 </div>
 
 
-    <link rel="stylesheet" href="bootstrap.min.js">
+    <link rel="stylesheet" href="/Bootstrap/bootstrap.min.js">
 </body>
 </html>
