fegyverek oldal kesz

--- a/Weboldal/Fegyverek/fegyverek.html
+++ b/Weboldal/Fegyverek/fegyverek.html
@@ -33,37 +33,39 @@
 
       <div class="fegyverek">
         <div class="kartyak">
-          <div class="card card1" style="width: 18rem;">
-            <img class="kep" src="../Képek/pisztoly.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <a href="../Pisztoly/pisztoly.html" class="gomb1 btn btn-primary">Pisztoly</a>
+          <div>
+            <div class="card card1" style="width: 18rem;">
+              <img class="kep" src="../Képek/pisztoly.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <a href="../Pisztoly/pisztoly.html" class="gomb1 btn btn-primary">Pisztoly</a>
+              </div>
             </div>
+
+            <hr>
+            <div class="card card2" style="width: 18rem;">
+              <img class="kep" src="../Képek/gepkarabely.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <a href="#" class="gomb2 btn btn-primary">Gépkarabély</a>
+              </div>
           </div>
 
-          <hr>
-
-          <div class="card card2" style="width: 18rem;">
-            <img class="kep" src="../Képek/gepkarabely.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <a href="#" class="gomb2 btn btn-primary">Gépkarabély</a>
             </div>
-          </div>
-
-          <hr>
-
-          <div class="card card3" style="width: 18rem;">
-            <img class="kep" src="../Képek/loszer.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <a href="#" class="gomb3 btn btn-primary">Lőszer</a>
+            <hr>
+          <div>
+            <div class="card card3" style="width: 18rem;">
+              <img class="kep" src="../Képek/loszer.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <a href="#" class="gomb3 btn btn-primary">Lőszer</a>
+              </div>
             </div>
-          </div>
 
-          <hr>
-
-          <div class="card card4" style="width: 18rem;">
-            <img class="kep" src="../Képek/egyeb.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <a href="#" class="gomb4 btn btn-primary">Egyéb fegyverek</a>
+            <hr>
+            
+            <div class="card card4" style="width: 18rem;">
+              <img class="kep" src="../Képek/egyeb.png" class="card-img-top" alt="...">
+              <div class="card-body">
+                <a href="#" class="gomb4 btn btn-primary">Egyéb fegyverek</a>
+              </div>
             </div>
           </div>
         </div>
