--- a/Weboldal/Főoldal/fooldal.html
+++ b/Weboldal/Főoldal/fooldal.html
@@ -22,7 +22,7 @@
               <a class="navbar-brand" href="/Weboldal/Főoldal/fooldal.html">Főoldal</a>
               <a class="navbar-brand" aria-current="page" href="../Fegyverek/fegyverek.html">Fegyverek</a>
               <a class="navbar-brand" href="../Lőszer/loszer.html">Lőszer</a>
-              <a class="navbar-brand" href="../Kapcsolat/kapcsolat.html">Kapcsolat</a>
+              <a class="navbar-brand" href="../Kapcsolat/kapcsolatok.html">Kapcsolat</a>
               
             </div>
             <a class="navbar-brand" href="../Kosár/kosar.html"><img class="kosarlogo" src="../Képek/kosar logo.png" alt=""></a>
