--- a/Weboldal/Kapcsolat/kapcsolatok.html
+++ b/Weboldal/Kapcsolat/kapcsolatok.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warrior's Arsenal Fegyverbolt</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="kapcsolat.css">
+    <link rel="stylesheet" href="/Bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="kapcsolatok.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -17,10 +17,10 @@
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <img class="logo" src="/IKT-projekt/Képek/logo.png" alt="">
             <div class="navbar-nav">
-              <a class="navbar-brand" href="/IKT-projekt/Weboldal/Főoldal/fooldal.html">Főoldal</a>
-              <a class="navbar-brand" aria-current="page" href="/IKT-projekt/Weboldal/Fegyverek/fegyverek.html">Fegyverek</a>
-              <a class="navbar-brand" href="/IKT-projekt/Weboldal/Lőszer/loszer.html">Lőszer</a>
-              <a class="navbar-brand" href="/IKT-projekt/Weboldal/Kapcsolat/kapcsolat.html">Kapcsolat</a>
+              <a class="navbar-brand" href="../Főoldal/fooldal.html">Főoldal</a>
+              <a class="navbar-brand" aria-current="page" href="../Fegyverek/fegyverek.html">Fegyverek</a>
+              <a class="navbar-brand" href="../Lőszer/loszer.html">Lőszer</a>
+              <a class="navbar-brand" href="../Kapcsolat/kapcsolatok.html">Kapcsolat</a>
               
             </div>
             <a class="navbar-brand" href="/IKT-projekt/Weboldal/Kosár/kosar.html"><img class="kosarlogo" src="/IKT-projekt/Képek/kosar logo.png" alt=""></a>
