--- a/Weboldal/Pisztoly/pisztoly.html
+++ b/Weboldal/Pisztoly/pisztoly.html
@@ -33,8 +33,25 @@
   <div class="card" style="width: 18rem;">
     <img class="kep" src="../Képek/beretta92.png" class="card-img-top" alt="...">
     <div class="card-body">
-      <a href="#" class="nev btn btn-primary">Beretta</a>
-      <p class="ár">149.999Ft</p>
+      <h4 class="nev">Beretta92</h4>
+      <p class="ár">149.999 Ft</p>
+    </div>
+  </div>
+<hr>
+  <div class="card" style="width: 18rem;">
+    <img class="kep" src="../Képek/glock 1.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h4 class="nev">Glock</h4>
+      <p class="ár">149.999 Ft</p>
+    </div>
+  </div>
+
+<hr>
+  <div class="card" style="width: 18rem;">
+    <img class="kep" src="../Képek/beretta92.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h4 class="nev">Desert Eagle </h4>
+      <p class="ár">239.999 Ft</p>
     </div>
   </div>
 
