pisztoly weboldalon kép elhelyezés

--- a/Weboldal/Pisztoly/pisztoly.html
+++ b/Weboldal/Pisztoly/pisztoly.html
@@ -30,7 +30,7 @@
 
 <div class="haromkep">
   
-  <div class="card" style="width: 18rem;">
+  <div class="card beretta" style="width: 18rem;">
     <img class="kep" src="../Képek/beretta92.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h4 class="nev">Beretta92</h4>
@@ -38,7 +38,7 @@
     </div>
   </div>
 <hr>
-  <div class="card" style="width: 18rem;">
+  <div class="card glock" style="width: 18rem;">
     <img class="kep" src="../Képek/glock 1.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h4 class="nev">Glock</h4>
@@ -47,8 +47,8 @@
   </div>
 
 <hr>
-  <div class="card" style="width: 18rem;">
-    <img class="kep" src="../Képek/beretta92.png" class="card-img-top" alt="...">
+  <div class="card desert" style="width: 18rem;">
+    <img class="kep" src="../Képek/Desert Eagle 3.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h4 class="nev">Desert Eagle </h4>
       <p class="ár">239.999 Ft</p>
