--- a/Weboldal/Lőszer/loszer.html
+++ b/Weboldal/Lőszer/loszer.html
@@ -29,8 +29,43 @@
         <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
     </div>
   </div>
-</nav>      
+</nav>    
 
+<div class="loszerek">
+  <div class="kartyak">
+    <div class="card card1" style="width: 18rem;">
+      <img class="kep" src="../Képek/parabellum.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h4 class="nev">Parabellum 9mm</h4>
+        <p class="ár">149.999 Ft</p>
+      </div>
+    </div>
+
+    <div class="card card2" style="width: 18rem;">
+      <img class="kep" src="../Képek/magnum.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h4 class="nev">.357 magnum</h4>
+        <p class="ár">149.999 Ft</p>
+      </div>
+    </div>
+
+    <div class="card card3" style="width: 18rem;">
+      <img class="kep" src="../Képek/7.62x39.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h4 class="nev">7.62x39mm</h4>
+        <p class="ár">149.999 Ft</p>
+      </div>
+    </div>
+
+    <div class="card card4" style="width: 18rem;">
+      <img class="kep" src="../Képek/7.62x39 2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h4 class="nev">7.62x39mm</h4>
+        <p class="ár">149.999 Ft</p>
+      </div>
+    </div>
+  </div>
+</div>
     <script src="/Bootstrap/bootstrap.min.js"></script>
 </body>
 </html>
