--- a/Weboldal/Lőszer/loszer.html
+++ b/Weboldal/Lőszer/loszer.html
@@ -34,38 +34,39 @@
 <div class="loszerek">
   <div class="kartyak">
     <div class="card card1" style="width: 18rem;">
-      <img class="kep" src="../Képek/parabellum.png" class="card-img-top" alt="...">
+      <div class="hatter1">
+        <img class="kep kep1" src="../Képek/parabellum.png" class="card-img-top" alt="...">
+      </div>
       <div class="card-body">
-        <h4 class="nev">Parabellum 9mm</h4>
+        <h4 class="nev1">Parabellum 9mm</h4>
         <p class="ár">149.999 Ft</p>
       </div>
     </div>
 
     <div class="card card2" style="width: 18rem;">
-      <img class="kep" src="../Képek/magnum.png" class="card-img-top" alt="...">
+      <div class="hatter2">
+        <img class="kep kep2" src="../Képek/magnum.png" class="card-img-top" alt="...">
+      </div>
       <div class="card-body">
-        <h4 class="nev">.357 magnum</h4>
+        <h4 class="nev2">.357 magnum</h4>
         <p class="ár">149.999 Ft</p>
       </div>
     </div>
 
     <div class="card card3" style="width: 18rem;">
-      <img class="kep" src="../Képek/7.62x39.png" class="card-img-top" alt="...">
+      <div class="hatter3">
+        <img class="kep kep3" src="../Képek/7.62x39.png" class="card-img-top" alt="...">
+      </div>
       <div class="card-body">
-        <h4 class="nev">7.62x39mm</h4>
+        <h4 class="nev3">7.62x39mm</h4>
         <p class="ár">149.999 Ft</p>
       </div>
     </div>
 
-    <div class="card card4" style="width: 18rem;">
-      <img class="kep" src="../Képek/7.62x39 2.png" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h4 class="nev">7.62x39mm</h4>
-        <p class="ár">149.999 Ft</p>
-      </div>
-    </div>
+    
   </div>
 </div>
+
     <script src="/Bootstrap/bootstrap.min.js"></script>
 </body>
 </html>
