--- a/Weboldal/Lőszer/loszer.html
+++ b/Weboldal/Lőszer/loszer.html
@@ -37,8 +37,9 @@
       <div class="hatter1">
         <img class="kep kep1" src="../Képek/parabellum.png" class="card-img-top" alt="...">
       </div>
-      <div class="card-body">
+      <div class="card-body gomb">
         <h4 class="nev1">Parabellum 9mm</h4>
+        <img class="kosar" src="../Képek/kosar logo.png" alt="">
         <p class="ár">149.999 Ft</p>
       </div>
     </div>
