--- a/Weboldal/Főoldal/fooldal.html
+++ b/Weboldal/Főoldal/fooldal.html
@@ -41,6 +41,12 @@
           <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_2.png" alt=""></div>
           <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_3.png" alt=""></div>
         </div>
+        <div class="szoveg1">
+          <h2>Legújabb <br> fegyvereink</h2>
+          <div class="fooldal-ár">
+            <h3><s>1 200 199 Ft</s></h3>
+          </div>
+        </div>
       </footer>
     <script src="/Bootstrap/bootstrap.min.js"></script>
 </body>
