átrendezése a pisztoly oldalnak

--- a/Weboldal/Pisztoly/pisztoly.html
+++ b/Weboldal/Pisztoly/pisztoly.html
@@ -46,10 +46,13 @@
     <div class="card-body">
       <div class="megoldas">
         <h4 class="nev">Glock</h4>
+        <div class="">
         <img class="kedvencek" src="../Képek/kedvencek.png" alt="">
         <img class="kosar" src="../Képek/kosar logo.png" alt="">
       </div>
-        <p class="ár">149.999 Ft</p>
+        </div>
+       
+      <p class="ár">149.999 Ft</p>
     </div>
   </div>
 
