--- a/Weboldal/Főoldal/fooldal.html
+++ b/Weboldal/Főoldal/fooldal.html
@@ -42,9 +42,12 @@
           <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_3.png" alt=""></div>
         </div>
         <div class="szoveg1">
-          <h2>Legújabb <br> fegyvereink</h2>
-          <div class="fooldal-ár">
-            <h3><s>1 200 199 Ft</s></h3>
+          <h1>Legújabb <br> fegyvereink</h1>
+          <div class="fooldal-ár1">
+            <h2><s>1 200 199 Ft</s></h2>
+          </div>
+          <div class="piros-ár1">
+            <h2>913 599 Ft</h2>
           </div>
         </div>
       </footer>
