--- a/Weboldal/Főoldal/fooldal.html
+++ b/Weboldal/Főoldal/fooldal.html
@@ -49,6 +49,25 @@
           <div class="piros-ár1">
             <h2>913 599 Ft</h2>
           </div>
+       
+          <div class="szoveg1">
+            <h1>Legújabb <br> fegyvereink</h1>
+            <div class="fooldal-ár1">
+              <h2><s>1 200 199 Ft</s></h2>
+            </div>
+            <div class="piros-ár1">
+              <h2>913 599 Ft</h2>
+            </div>
+
+            <div class="szoveg1">
+              <h1>Legújabb <br> fegyvereink</h1>
+              <div class="fooldal-ár1">
+                <h2><s>1 200 199 Ft</s></h2>
+              </div>
+              <div class="piros-ár1">
+                <h2>913 599 Ft</h2>
+              </div>
+
         </div>
       </footer>
     <script src="/Bootstrap/bootstrap.min.js"></script>
