főoldal footer elkészült

--- a/Weboldal/Főoldal/index.html
+++ b/Weboldal/Főoldal/index.html
@@ -41,32 +41,29 @@
           <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_2.png" alt=""></div>
           <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_3.png" alt=""></div>
         </div>
+        
         <div class="szoveg1">
           <h1>Legújabb <br> fegyvereink</h1>
-          <div class="fooldal-ár1">
-            <h2><s>1 200 199 Ft</s></h2>
-          </div>
-          <div class="piros-ár1">
-            <h2>913 599 Ft</h2>
-          </div>
+        <div class="fooldal-ár1">
+          <h2><s>1 200 199 Ft</s></h2>
+        </div>
+        <div class="piros-ár1">
+          <h2>913 599 Ft</h2>
+        </div>
        
-          <div class="szoveg1">
-            <h1>Legújabb <br> fegyvereink</h1>
-            <div class="fooldal-ár1">
-              <h2><s>1 200 199 Ft</s></h2>
-            </div>
-            <div class="piros-ár1">
-              <h2>913 599 Ft</h2>
-            </div>
+        <div class="szoveg2">
+        <h1>Új CMP9<br>SMG</h1>
+        <div class="fooldal-ár2">
+          <h2><s>978 599 Ft</s></h2>
+        </div>
+        <div class="piros-ár2">
+          <h2>613 459 Ft</h2>
+        </div>
 
-            <div class="szoveg1">
-              <h1>Legújabb <br> fegyvereink</h1>
-              <div class="fooldal-ár1">
-                <h2><s>1 200 199 Ft</s></h2>
-              </div>
-              <div class="piros-ár1">
-                <h2>913 599 Ft</h2>
-              </div>
+        <div class="szoveg3">
+          <h1>Mesterlövész<br>fegyvereink</h1>
+          <div class="fooldal-ár3">
+            <h2>Akár 899 999 Ft-tól</h2>
 
         </div>
       </footer>
