kapcsolat oldal jol halad

--- a/Weboldal/Kapcsolat/kapcsolatok.html
+++ b/Weboldal/Kapcsolat/kapcsolatok.html
@@ -33,20 +33,29 @@
 
 <div class="cim"><h1>Lépj velünk kapcsolatba!</h1></div>
 
-<div class="kereses">
-  <div class="email">
-    <form class="d-flex flex-column" role="search">
-      <input class="form-control me-2 mb-4" type="search" placeholder="E-mail címed" aria-label="Search">
+<div class="container">
+  <div class="baloldal">
+      <div class="email">
+        <form class="d-flex flex-column" role="search">
+          <input class="form-control me-2 mb-4" type="search" placeholder="E-mail címed" aria-label="Search">
+      </div>
+
+      <div class="segitseg">
+        <form class="d-flex flex-column" role="search">
+          <input class="form-control me-2" type="search" placeholder="Miben segíthetünk?" aria-label="Search">
+      </div>
+
+    <div class="gomb">
+      <a href="" class="kuldesgomb btn btn-primary">Küldés</a>
+    </div>
   </div>
 
-  <div class="segitseg">
-    <form class="d-flex flex-column" role="search">
-      <input class="form-control me-2" type="search" placeholder="Miben segíthetünk?" aria-label="Search">
+
+  <div class="jobboldal">
+    <h1>Üzletünk</h1>
   </div>
+
 </div>
-
-
-
     <script src="/Bootstrap/bootstrap.min.js"></script>
 </body>
 </html>
