főoldal footer javítva

--- a/Weboldal/Főoldal/index.html
+++ b/Weboldal/Főoldal/index.html
@@ -36,10 +36,14 @@
         <div id="vásárolj_gomb">Vásárolj most!</div>
       </div>
       <footer>
-        <div class="row" id="footer_content">
-          <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_1.png" alt=""></div>
-          <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_2.png" alt=""></div>
-          <div class="ajánlások col-3"><img src="../Képek/Főoldal_kép_3.png" alt=""></div>
+        <div class="ajanlas1">
+          <img src="/Weboldal/Képek/Főoldal_kép_1.png" alt="">
+        </div>
+        <div class="ajanlas2">
+          <img src="/Weboldal/Képek/Főoldal_kép_2.png" alt="">
+        </div>
+        <div class="ajanlas3">
+          <img src="/Weboldal/Képek/Főoldal_kép_3.png" alt="">
         </div>
         
         <div class="szoveg1">
