--- a/Weboldal/Pisztoly/pisztoly.html
+++ b/Weboldal/Pisztoly/pisztoly.html
@@ -45,8 +45,8 @@
     <img class="kep" src="../Képek/glock 1.png" class="card-img-top" alt="...">
     <div class="card-body">
       <div class="megoldas">
-        <div>
-           <h4 class="nev">Glock</h4>
+        <div class="szöveg">
+        <h4 class="nev">Glock</h4>
         <p class="ár">149.999 Ft</p>
         </div>
        
@@ -60,11 +60,7 @@
 
 <hr>
   <div class="card desert" style="width: 18rem;">
-    <img class="kep" src="../Képek/Desert Eagle 3.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h4 class="nev">Desert Eagle </h4>
-      
-      <p class="ár">239.999 Ft</p>
+ 
 
     </div>
   </div>
