--- a/Weboldal/Lőszer/loszer.html
+++ b/Weboldal/Lőszer/loszer.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <img class="logo" src="../Képek/logo.png" alt="">
       <div class="navbar-nav">
-        <a class="navbar-brand" href="../Főoldal/fooldal.html">Főoldal</a>
+        <a class="navbar-brand" href="/index.html">Főoldal</a>
         <a class="navbar-brand" aria-current="page" href="../Fegyverek/fegyverek.html">Fegyverek</a>
         <a class="navbar-brand" href="../Lőszer/loszer.html">Lőszer</a>
         <a class="navbar-brand" href="../Kapcsolat/kapcsolatok.html">Kapcsolat</a>
