--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <img class="logo" src="../Képek/logo.png" alt="">
+            <img class="logo" src="/Weboldal/Képek/logo.png" alt="">
             <div class="navbar-nav">
-              <a class="navbar-brand" href="../IKT-projekt/index.html">Főoldal</a>
-              <a class="navbar-brand" aria-current="page" href="../Fegyverek/fegyverek.html">Fegyverek</a>
-              <a class="navbar-brand" href="../Lőszer/loszer.html">Lőszer</a>
-              <a class="navbar-brand" href="../Kapcsolat/kapcsolatok.html">Kapcsolat</a>
+              <a class="navbar-brand" href="/index.html">Főoldal</a>
+              <a class="navbar-brand" aria-current="page" href="/Weboldal/Fegyverek/fegyverek.html">Fegyverek</a>
+              <a class="navbar-brand" href="/Weboldal/Lőszer/loszer.html">Lőszer</a>
+              <a class="navbar-brand" href="/Weboldal/Kapcsolat/kapcsolatok.html">Kapcsolat</a>
               
             </div>
-            <a class="navbar-brand" href="../Kosár/kosar.html"><img class="kosarlogo" src="../Képek/kosar logo.png" alt=""></a>
-            <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
+            <a class="navbar-brand" href="/Weboldal/Kosár/kosar.html"><img class="kosarlogo" src="/Weboldal/Képek/kosar logo.png" alt=""></a>
+            <a class="navbar-brand" href="/Weboldal/kedvencek/kedvencek.html"><img class="kedvenclogo" src="/Weboldal/Képek/kedvencek.png" alt=""></a>
           </div>
         </div>
       </nav>
