--- a/Weboldal/kedvencek/kedvencek.html
+++ b/Weboldal/kedvencek/kedvencek.html
@@ -25,8 +25,8 @@
           <a class="navbar-brand" href="../Kapcsolat/kapcsolat.html">Kapcsolat</a>
           
         </div>
-        <a class="navbar-brand" href="../Kosár/kosar.html"><img class="kosarlogo" src="../Képek/kosar logo.png" alt=""></a>
-        <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
+        <div class="navbar-brand" href="../Kosár/kosar.html"><img class="kosarlogo" src="../Képek/kosar logo.png" alt=""></div>
+        <div class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></div>
       </div>
     </div>
   </nav>
