kapcsolat oldal foyltatás

--- a/Weboldal/Kapcsolat/kapcsolatok.html
+++ b/Weboldal/Kapcsolat/kapcsolatok.html
@@ -52,7 +52,8 @@
 
 
   <div class="jobboldal">
-    <h1>Üzletünk</h1>
+    <img class="uzletunkkep" src="/Weboldal/Képek/uzletunk.png" alt="">
+    <h1 class="uzletunk">Üzletünk</h1>
   </div>
 
 </div>
