kapcsolatok oldal nem jo

--- a/Weboldal/Kapcsolat/kapcsolatok.html
+++ b/Weboldal/Kapcsolat/kapcsolatok.html
@@ -51,10 +51,15 @@
   </div>
 
 
-  <div class="jobboldal">
-    <img class="uzletunkkep" src="/Weboldal/Képek/uzletunk.png" alt="">
-    <h1 class="uzletunk">Üzletünk</h1>
+  <div class="container">
+    <div class="jobboldal">
+      <img class="uzletunkkep" src="../Képek/uzletunk.png" alt="">
+      <h1 class="felso">Üzletünk</h1>
+      
+      <h4 class="also">6500, Baja, nemtudom utca 1.</h4>
+    </div>
   </div>
+  
 
 </div>
     <script src="/Bootstrap/bootstrap.min.js"></script>
