kedvencek oldallal haladás

--- a/Weboldal/kedvencek/kedvencek.html
+++ b/Weboldal/kedvencek/kedvencek.html
@@ -30,7 +30,18 @@
       </div>
     </div>
   </nav>
-  <div class="rect"></div>
+  <div class="rect">
+    <div class="kisrect">
+      <div class="kep"><h3>kép</h3></div>
+    </div>
+    <div class="fegyvernev">
+      <h2>Fegyver név</h2>
+    </div>
+    <div class="fegyverar">
+      <h3>Ár</h3>
+    </div>
+    <div class="kisx"><img src="../Képek/images-removebg-preview (1).png" alt=""></div>
+  </div>
 
 
           
