üres kedvencek folytatása

--- a/Weboldal/kedvencek/ureskedvencek.html
+++ b/Weboldal/kedvencek/ureskedvencek.html
@@ -8,30 +8,27 @@
     <link rel="stylesheet" href="ureskedvencek.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <img class="logo" src="/Weboldal/Képek/logo.png" alt="">
-            <div class="navbar-nav">
-              <a class="navbar-brand" href="/index.html">Főoldal</a>
-              <a class="navbar-brand" aria-current="page" href="/Weboldal/Fegyverek/fegyverek.html">Fegyverek</a>
-              <a class="navbar-brand" href="/Weboldal/Lőszer/loszer.html">Lőszer</a>
-              <a class="navbar-brand" href="/Weboldal/Kapcsolat/kapcsolatok.html">Kapcsolat</a>
-              
-            </div>
-            <a class="navbar-brand" href="/Weboldal/Kosár/kosar.html"><img class="kosarlogo" src="/Weboldal/Képek/kosar logo.png" alt=""></a>
-            <a class="navbar-brand" href="/Weboldal/kedvencek/kedvencek.html"><img class="kedvenclogo" src="/Weboldal/Képek/kedvencek.png" alt=""></a>
-          </div>
-        </div>
-      </nav>
-    <div class="szoveg">
-        <h1>A kedvenceid listája üres.</h1>
+  <header class="topnav">
+    <div class="nav-left">
+      <img src="/Weboldal/Képek/logo.png" alt="Warrior's Arsenal Logo">
     </div>
-    <div id="bongeszes">Böngészés</div>
+    <nav class="nav-center">
+      <a href="/index.html">Főoldal</a>
+      <a href="/Weboldal/Fegyverek/fegyverek.html">Vásárlás</a>
+      <a href="/Weboldal/Lőszer/loszer.html">Lőszerek</a>
+      <a href="/Weboldal/Kapcsolat/kapcsolatok.html">Kapcsolat</a>
+    </nav>
+    <div class="nav-right">
+      <a href="#"><img src="/Weboldal/Képek/kereses logo.png" alt="Keresés"></a>
+      <a href="/Weboldal/Kosár/kosar.html"><img src="/Weboldal/Képek/kosar logo.png" alt="Kosár"></a>
+      <a href="/Weboldal/kedvencek/kedvencek.html"><img src="/Weboldal/Képek/kedvencek.png" alt="Kedvencek"></a>
+    </div>
+  </header>
+
+  <div class="szoveg"><h1>A kedvenceid listája üres.</h1></div>
+  <div id="bongeszes">Böngészés</div>
+  
+  
     <script src="/IKT-projekt/Weboldal/Főoldal/bootstrap.min.js"></script>
 </body>
 </html>
