ez gatya, nem tudom mi a problema a kapcsolat oldal jobb oldalan

--- a/Weboldal/Kapcsolat/kapcsolatok.html
+++ b/Weboldal/Kapcsolat/kapcsolatok.html
@@ -51,14 +51,15 @@
   </div>
 
 
-  <div class="container">
     <div class="jobboldal">
-      <img class="uzletunkkep" src="../Képek/uzletunk.png" alt="">
-      <h1 class="felso">Üzletünk</h1>
+      <div class="uzlet">
+        <img class="uzletunkkep" src="../Képek/uzletunk.png" alt="">
+        
+        <h1 class="felso">Üzletünk</h1>
       
-      <h4 class="also">6500, Baja, nemtudom utca 1.</h4>
+        <h4 class="also">6500, Baja, nemtudom utca 1.</h4>
+      </div>
     </div>
-  </div>
   
 
 </div>
