rajottunk a hibara a kapcsolatok oldalon

--- a/Weboldal/Kapcsolat/kapcsolatok.html
+++ b/Weboldal/Kapcsolat/kapcsolatok.html
@@ -54,10 +54,11 @@
     <div class="jobboldal">
       <div class="uzlet">
         <img class="uzletunkkep" src="../Képek/uzletunk.png" alt="">
+        <div>
+          <h1 class="felso">Üzletünk</h1>
         
-        <h1 class="felso">Üzletünk</h1>
-      
-        <h4 class="also">6500, Baja, nemtudom utca 1.</h4>
+          <h4 class="also">6500, Baja, nemtudom utca 1.</h4>
+        </div>
       </div>
     </div>
   
