--- a/Weboldal/Pisztoly/pisztoly.html
+++ b/Weboldal/Pisztoly/pisztoly.html
@@ -34,12 +34,22 @@
 <div class="haromkep">
   
   <div class="card beretta" style="width: 18rem;">
+    <img class="kep" src="../Képek/Desert Eagle 3.pngS" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h4 class="nev">Desert Eagle</h4>
+      <p class="ár">259.999 Ft</p>
+    </div>
+  </div>
+
+s
+  <div class="card beretta" style="width: 18rem;">
     <img class="kep" src="../Képek/beretta92.png" class="card-img-top" alt="...">
     <div class="card-body">
       <h4 class="nev">Beretta92</h4>
       <p class="ár">149.999 Ft</p>
     </div>
   </div>
+
 <hr>
   <div class="card glock" style="width: 18rem;">
     <img class="kep" src="../Képek/glock 1.png" class="card-img-top" alt="...">
