üres kedvencek oldal linkelése, css

--- a/Weboldal/Fegyverek/fegyverek.html
+++ b/Weboldal/Fegyverek/fegyverek.html
@@ -25,7 +25,7 @@
               
             </div>
             <a class="navbar-brand" href="../Kosár/kosar.html"><img class="kosarlogo" src="../Képek/kosar logo.png" alt=""></a>
-            <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
+            <a class="navbar-brand" href="../kedvencek/ureskedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
           </div>
         </div>
       </nav>
