--- a/Weboldal/Kosár/kosar.html
+++ b/Weboldal/Kosár/kosar.html
@@ -25,11 +25,11 @@
               
             </div>
             <a class="navbar-brand" href="../Kosár/kosar.html"><img class="kosarlogo" src="../Képek/kosar logo.png" alt=""></a>
-              <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
+              <a class="navbar-brand" href="../kedvencek/ureskedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
           </div>
         </div>
         <a class="navbar-brand" href="../Kosár/kosar.html"><img class="kosarlogo" src="../Képek/kosar logo.png" alt=""></a>
-        <a class="navbar-brand" href="../kedvencek/kedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
+        <a class="navbar-brand" href="../kedvencek/ureskedvencek.html"><img class="kedvenclogo" src="../Képek/kedvencek.png" alt=""></a>
       </div>
     </div>
   </nav>   
