üres kedvencek folytatása, link létrehozása

--- a/Weboldal/kedvencek/ureskedvencek.html
+++ b/Weboldal/kedvencek/ureskedvencek.html
@@ -26,7 +26,7 @@
   </header>
 
   <div class="szoveg"><h1>A kedvenceid listája üres.</h1></div>
-  <div id="bongeszes">Böngészés</div>
+  <div id="bongeszes"><a href="../Fegyverek/fegyverek.html">Böngészés</a></div>
   
   
     <script src="/IKT-projekt/Weboldal/Főoldal/bootstrap.min.js"></script>
